a few tests fixed